<resources>
    <string name="app_name">Basic Banking App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="onboarding">onBoarding</string>
    <string name="welcome"><![CDATA[Best solution to save your balance & transactions]]></string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="account_number">Account number</string>
    <string name="email">Email</string>
    <string name="balance">Balance</string>
    <string name="transfer_money">Transfer money</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="select">Select</string>
    <string name="amount_to_transfer">Amount to transfer</string>
    <string name="transfer">Transfer</string>
    <string name="select_account">Select an account</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount</string>
</resources>