<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.basicbankingapp.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            tools:context=".details.DetailsFragment">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@{viewModel.selectedAccount.name}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realAccountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@{viewModel.selectedAccount.accountNumber}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@{viewModel.selectedAccount.email}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@{String.valueOf(viewModel.selectedAccount.currentBalance)+'$'}"
                android:textSize="20sp" />

            <Button
                android:id="@+id/transfer"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/transfer_money"
                android:textAllCaps="false"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>
</layout>