<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.basicbankingapp.transfer.TransferViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            tools:context=".transfer.TransferFragment">

            <TextView
                android:id="@+id/sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@{viewModel.senderAccount.accountNumber}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/select"
                android:textColor="@color/primaryColor" />

            <TextView
                android:id="@+id/realReceiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@{viewModel.receiverAccount.accountNumber}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/amount_to_transfer"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountEt"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/amount_to_transfer"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/transferAmount"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/transfer"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</layout>