<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="transaction"
            type="com.example.basicbankingapp.database.TransactionsDatabase" />

        <variable
            name="viewModel"
            type="com.example.basicbankingapp.transactions.TransactionsViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/grey_200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/trnSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realTrnSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{transaction.sender}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/trnReceiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realTrnReceiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{transaction.receiver}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/trnAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realTrnAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(transaction.amount)+'$'}"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>